<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:orientation="vertical">

	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:id="@+id/hostName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/host_name" />

	<TextView
		style="?actionMenuTextColor"
		android:id="@+id/update_location_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/update_location_title" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="70dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/update_address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/update_address" />

		<EditText
			android:id="@+id/updateAddressEditText"
			android:layout_width="250dp"
			android:layout_height="wrap_content"/>

	</LinearLayout>

	<TextView
		style="?actionMenuTextColor"
		android:id="@+id/update_hours"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/update_hours" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="70dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/open_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/open_time" />

		<EditText
			android:id="@+id/openTimeEditText"
			android:layout_width="75dp"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/closing_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/closing_time"/>

		<EditText
			android:id="@+id/closingTimeEditText"
			android:layout_width="75dp"
			android:layout_height="wrap_content" />

	</LinearLayout>

	<Button
		android:id="@+id/menuDoneButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/done"/>

</LinearLayout>