<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:orientation="vertical">

	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:id="@+id/hostName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/host_name" />


	<Button
		android:id="@+id/location_update_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/location_update_button"
		/>

	<Button
		android:id="@+id/sign_out_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center|bottom"
		android:text="@string/sign_out_button"/>

</LinearLayout>

